[v1]: Enabling tomcat access logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#tomcat
+server.tomcat.basedir=d:/temp/logs
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
+
 # create and drop tables
 #spring.jpa.hibernate.ddl-auto=create-drop
 
