--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.mypack</groupId>
 	<artifactId>spring-boot-rest-react-app</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 
@@ -48,7 +49,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        
+        <!-- $ mvn install:install-file -Dfile=C:/Users/lenovo/.m2/repository/com/oracle/ojdbc6/11.2.0.3/ojdbc6-11.2.0.3.jar -DgroupId=com.oracle -DartifactId=ojdbc6 -Dversion=11.2.0.3 -Dpackaging=jar -->
+        <dependency>
+    		<groupId>com.oracle</groupId>
+     		<artifactId>ojdbc6</artifactId>
+     		<version>11.2.0.3</version>
+		</dependency>
+        
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
+	
+	
 
 	<build>
 		<plugins>
@@ -116,6 +132,7 @@
 			</plugin> -->
 
 		</plugins>
+		<finalName>${project.artifactId}</finalName>
 	</build>
 
 </project>
