[v2]: Enabled Spring Actuator and Security

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
 			<version>2.4.0</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- Adding spring security -->
+		<dependency>
+ 			<groupId>org.springframework.boot</groupId>
+ 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
