--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.datasource.password=root1
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+# Spring Boot Actuator
+management.endpoints.web.exposure.include=*
+
+#### Spring Security : Overriding default username and password
+spring.security.user.name=imran
+spring.security.user.password=12345678
+spring.security.user.roles=USER
