[v2]:Added example of spring's Condition interface

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
  			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		
+		<!-- To reflect the changes without re-starting server -->
+    	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+    	</dependency>
+		
 	</dependencies>
 
 	<build>
