--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ management.endpoints.web.exposure.include=*
 spring.security.user.name=imran
 spring.security.user.password=12345678
 spring.security.user.roles=USER
+
+### ConditionalOnProperty example
+create.ConditionalBean=create
