[v2]: Configured https connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.security.user.roles=USER
 
 ### ConditionalOnProperty example
 create.ConditionalBean=create
+
+## SSL Configuration
+server.port=8443
+server.ssl.key-alias=localhost_sslserver
+server.ssl.key-password=changeit
+server.ssl.key-store=classpath:ssl-server.jks
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
