--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ spring.security.user.roles=USER
 ### ConditionalOnProperty example
 create.ConditionalBean=create
 
-## SSL Configuration
-server.port=8443
-server.ssl.key-alias=localhost_sslserver
-server.ssl.key-password=changeit
-server.ssl.key-store=classpath:ssl-server.jks
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-type=JKS
+## SSL Configuration  Uncomment below properties to run application on https protocol
+##server.port=8443
+##server.ssl.key-alias=localhost_sslserver
+##server.ssl.key-password=changeit
+##server.ssl.key-store=classpath:ssl-server.jks
+##server.ssl.key-store-provider=SUN
+##server.ssl.key-store-type=JKS
