--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ spring.security.user.roles=USER
 create.ConditionalBean=create
 
 ## SSL Configuration  Uncomment below properties to run application on https protocol
-##server.port=8443
-##server.ssl.key-alias=localhost_sslserver
-##server.ssl.key-password=changeit
-##server.ssl.key-store=classpath:ssl-server.jks
-##server.ssl.key-store-provider=SUN
-##server.ssl.key-store-type=JKS
+#server.port=8443
+#server.ssl.key-alias=localhost_sslserver
+#server.ssl.key-password=changeit
+#server.ssl.key-store=classpath:local-ssl.jks
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-type=JKS
