[v2]:Changes db properties and some changes related to Condition interface.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522/XEPDB1
 spring.datasource.username=root
 spring.datasource.password=root1
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -24,6 +24,7 @@ spring.security.user.roles=USER
 
 ### ConditionalOnProperty example
 create.ConditionalBean=create
+dbType=MySql
 
 ## SSL Configuration  Uncomment below properties to run application on https protocol
 #server.port=8443
