--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #tomcat
+server.port=8888
 server.tomcat.basedir=d:/temp/logs
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
@@ -33,3 +34,6 @@ dbType=MySql
 #server.ssl.key-store=classpath:local-ssl.jks
 #server.ssl.key-store-provider=SUN
 #server.ssl.key-store-type=JKS
+
+#Swagger url
+#http://localhost:{app-port}/swagger-ui.html
