--- a/web-service/src/main/resources/application.properties
+++ b/web-service/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 management.endpoints.web.exposure.include=*
 
 #### Spring Security : Overriding default username and password
+enable.security=false
 spring.security.user.name=imran
 spring.security.user.password=12345678
 spring.security.user.roles=USER
